all emotion excel file added

--- a/CSV_FILE_CREATION.ipynb
+++ b/CSV_FILE_CREATION.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "000a1db5",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3029aba0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ed6aa05a",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "id": "cde73b84",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "245b826f",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,11 +111,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "63fe0448",
+   "cell_type": "markdown",
+   "id": "de12861c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "for each_actor in os.listdir('dataset/'):\n",
     "    for each_file in os.listdir(os.path.join('dataset', each_actor)):\n",
@@ -136,7 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 6,
+   "id": "caeaeeed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for each_actor in os.listdir('dataset/'):\n",
+    "    for each_file in os.listdir(os.path.join('dataset', each_actor)):\n",
+    "        \n",
+    "        emotion = each_file.split(\"-\")[2]\n",
+    "        \n",
+    "        y , sr = librosa.load(os.path.join('dataset', each_actor, each_file), sr=None)\n",
+    "        feature_vector = get_feature_vector(y, sr)\n",
+    "        df = df.append([feature_vector + [str(emotion)]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "8a951048",
    "metadata": {},
    "outputs": [
@@ -173,53 +188,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.573611</td>\n",
-       "      <td>6355.887484</td>\n",
-       "      <td>5234.605322</td>\n",
-       "      <td>11777.799479</td>\n",
-       "      <td>0.002030</td>\n",
-       "      <td>0.039407</td>\n",
-       "      <td>Sad</td>\n",
+       "      <td>0.633091</td>\n",
+       "      <td>7416.297747</td>\n",
+       "      <td>5551.291827</td>\n",
+       "      <td>13285.735887</td>\n",
+       "      <td>0.002120</td>\n",
+       "      <td>0.050476</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.582330</td>\n",
-       "      <td>6610.435403</td>\n",
-       "      <td>5502.210857</td>\n",
-       "      <td>12477.565299</td>\n",
-       "      <td>0.001901</td>\n",
-       "      <td>0.042950</td>\n",
-       "      <td>Sad</td>\n",
+       "      <td>0.629568</td>\n",
+       "      <td>7135.571471</td>\n",
+       "      <td>5653.771579</td>\n",
+       "      <td>13191.643371</td>\n",
+       "      <td>0.002258</td>\n",
+       "      <td>0.052904</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.599464</td>\n",
-       "      <td>6739.503744</td>\n",
-       "      <td>5073.448861</td>\n",
-       "      <td>11920.925152</td>\n",
-       "      <td>0.001695</td>\n",
-       "      <td>0.029217</td>\n",
-       "      <td>Sad</td>\n",
+       "      <td>0.619984</td>\n",
+       "      <td>7239.265648</td>\n",
+       "      <td>5641.048019</td>\n",
+       "      <td>13279.137826</td>\n",
+       "      <td>0.002707</td>\n",
+       "      <td>0.046627</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.600793</td>\n",
-       "      <td>7106.008406</td>\n",
-       "      <td>5436.401320</td>\n",
-       "      <td>12793.611551</td>\n",
-       "      <td>0.002221</td>\n",
-       "      <td>0.040750</td>\n",
-       "      <td>Sad</td>\n",
+       "      <td>0.612607</td>\n",
+       "      <td>7008.958169</td>\n",
+       "      <td>5802.315323</td>\n",
+       "      <td>13272.074245</td>\n",
+       "      <td>0.002521</td>\n",
+       "      <td>0.053835</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.592469</td>\n",
-       "      <td>6343.886846</td>\n",
-       "      <td>5318.847928</td>\n",
-       "      <td>11843.159139</td>\n",
-       "      <td>0.002799</td>\n",
-       "      <td>0.044057</td>\n",
-       "      <td>Sad</td>\n",
+       "      <td>0.608243</td>\n",
+       "      <td>6997.311810</td>\n",
+       "      <td>5518.637359</td>\n",
+       "      <td>12649.543486</td>\n",
+       "      <td>0.001579</td>\n",
+       "      <td>0.045929</td>\n",
+       "      <td>02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -233,90 +248,90 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.427414</td>\n",
-       "      <td>5044.967425</td>\n",
-       "      <td>4783.601880</td>\n",
-       "      <td>9962.539557</td>\n",
-       "      <td>0.016647</td>\n",
-       "      <td>0.095877</td>\n",
-       "      <td>Anger</td>\n",
+       "      <td>0.429269</td>\n",
+       "      <td>5591.270535</td>\n",
+       "      <td>4661.772726</td>\n",
+       "      <td>10561.450195</td>\n",
+       "      <td>0.007347</td>\n",
+       "      <td>0.084300</td>\n",
+       "      <td>08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.384375</td>\n",
-       "      <td>4605.335977</td>\n",
-       "      <td>4068.533874</td>\n",
-       "      <td>8769.969512</td>\n",
-       "      <td>0.029466</td>\n",
-       "      <td>0.076286</td>\n",
-       "      <td>Anger</td>\n",
+       "      <td>0.444999</td>\n",
+       "      <td>5353.122906</td>\n",
+       "      <td>4447.323308</td>\n",
+       "      <td>9929.011824</td>\n",
+       "      <td>0.010930</td>\n",
+       "      <td>0.086496</td>\n",
+       "      <td>08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.382802</td>\n",
-       "      <td>4657.776492</td>\n",
-       "      <td>3919.602682</td>\n",
-       "      <td>8551.143293</td>\n",
-       "      <td>0.022338</td>\n",
-       "      <td>0.069958</td>\n",
-       "      <td>Anger</td>\n",
+       "      <td>0.408589</td>\n",
+       "      <td>5308.188338</td>\n",
+       "      <td>4351.584428</td>\n",
+       "      <td>9982.238606</td>\n",
+       "      <td>0.009599</td>\n",
+       "      <td>0.088036</td>\n",
+       "      <td>08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.479681</td>\n",
-       "      <td>6028.449512</td>\n",
-       "      <td>4751.686295</td>\n",
-       "      <td>10894.730548</td>\n",
-       "      <td>0.016544</td>\n",
-       "      <td>0.083097</td>\n",
-       "      <td>Anger</td>\n",
+       "      <td>0.435064</td>\n",
+       "      <td>5515.469565</td>\n",
+       "      <td>4817.176274</td>\n",
+       "      <td>11011.888587</td>\n",
+       "      <td>0.013701</td>\n",
+       "      <td>0.099349</td>\n",
+       "      <td>08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.403176</td>\n",
-       "      <td>4855.821970</td>\n",
-       "      <td>4140.850562</td>\n",
-       "      <td>9093.407490</td>\n",
-       "      <td>0.018608</td>\n",
-       "      <td>0.086302</td>\n",
-       "      <td>Anger</td>\n",
+       "      <td>0.475801</td>\n",
+       "      <td>5476.143213</td>\n",
+       "      <td>4863.325971</td>\n",
+       "      <td>10754.582111</td>\n",
+       "      <td>0.012236</td>\n",
+       "      <td>0.092145</td>\n",
+       "      <td>08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>384 rows × 7 columns</p>\n",
+       "<p>1440 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "    chrome_stft  spectral_centroid  spectral_bandwidth  spectral_rolloff  \\\n",
-       "0      0.573611        6355.887484         5234.605322      11777.799479   \n",
-       "0      0.582330        6610.435403         5502.210857      12477.565299   \n",
-       "0      0.599464        6739.503744         5073.448861      11920.925152   \n",
-       "0      0.600793        7106.008406         5436.401320      12793.611551   \n",
-       "0      0.592469        6343.886846         5318.847928      11843.159139   \n",
+       "0      0.633091        7416.297747         5551.291827      13285.735887   \n",
+       "0      0.629568        7135.571471         5653.771579      13191.643371   \n",
+       "0      0.619984        7239.265648         5641.048019      13279.137826   \n",
+       "0      0.612607        7008.958169         5802.315323      13272.074245   \n",
+       "0      0.608243        6997.311810         5518.637359      12649.543486   \n",
        "..          ...                ...                 ...               ...   \n",
-       "0      0.427414        5044.967425         4783.601880       9962.539557   \n",
-       "0      0.384375        4605.335977         4068.533874       8769.969512   \n",
-       "0      0.382802        4657.776492         3919.602682       8551.143293   \n",
-       "0      0.479681        6028.449512         4751.686295      10894.730548   \n",
-       "0      0.403176        4855.821970         4140.850562       9093.407490   \n",
+       "0      0.429269        5591.270535         4661.772726      10561.450195   \n",
+       "0      0.444999        5353.122906         4447.323308       9929.011824   \n",
+       "0      0.408589        5308.188338         4351.584428       9982.238606   \n",
+       "0      0.435064        5515.469565         4817.176274      11011.888587   \n",
+       "0      0.475801        5476.143213         4863.325971      10754.582111   \n",
        "\n",
        "         rms  zero_crossing_rate Emotion  \n",
-       "0   0.002030            0.039407     Sad  \n",
-       "0   0.001901            0.042950     Sad  \n",
-       "0   0.001695            0.029217     Sad  \n",
-       "0   0.002221            0.040750     Sad  \n",
-       "0   0.002799            0.044057     Sad  \n",
+       "0   0.002120            0.050476      01  \n",
+       "0   0.002258            0.052904      01  \n",
+       "0   0.002707            0.046627      01  \n",
+       "0   0.002521            0.053835      01  \n",
+       "0   0.001579            0.045929      02  \n",
        "..       ...                 ...     ...  \n",
-       "0   0.016647            0.095877   Anger  \n",
-       "0   0.029466            0.076286   Anger  \n",
-       "0   0.022338            0.069958   Anger  \n",
-       "0   0.016544            0.083097   Anger  \n",
-       "0   0.018608            0.086302   Anger  \n",
+       "0   0.007347            0.084300      08  \n",
+       "0   0.010930            0.086496      08  \n",
+       "0   0.009599            0.088036      08  \n",
+       "0   0.013701            0.099349      08  \n",
+       "0   0.012236            0.092145      08  \n",
        "\n",
-       "[384 rows x 7 columns]"
+       "[1440 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,12 +343,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 8,
    "id": "8087f3a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"sad_anger_emotions.csv\")"
+    "df.to_csv(\"all_emotions.csv\")"
    ]
   },
   {
